# chukei

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  dist-workspace.toml  pilot.env.example
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: docker-publish.yml  release-tagger.yml  release-version-guard.yml  release.yml  semver-check.yml  test.yml
config/: chukei-example.yaml  customer-pilot.yaml
crates/chukei-cli/: Cargo.toml
crates/chukei-cli/src/: main.rs
crates/chukei-cli/src/commands/: doctor.rs  evidence.rs  healthcheck.rs  mod.rs  plugins.rs  replay.rs  savings.rs  up.rs  validate.rs
crates/chukei-core/: Cargo.toml
crates/chukei-core/examples/: mock_sf.rs
crates/chukei-core/src/: circuit_breaker.rs  config.rs  error.rs  lib.rs
crates/chukei-core/src/attribute/: mod.rs
crates/chukei-core/src/cache/: disk.rs  mod.rs
crates/chukei-core/src/evidence/: mod.rs
crates/chukei-core/src/metrics/: mod.rs
crates/chukei-core/src/plugin/: bus.rs  mod.rs  registry.rs
crates/chukei-core/src/replay/: mod.rs
crates/chukei-core/src/rewrite/: mod.rs  rules.rs
crates/chukei-core/src/router/: mod.rs
crates/chukei-core/src/savings/: mod.rs
crates/chukei-core/src/sql/: features.rs  fingerprint.rs  hints.rs  mod.rs  normalise.rs  parse.rs
crates/chukei-core/src/suspend/: mod.rs
crates/chukei-core/src/wire/: mod.rs
crates/chukei-core/src/wire/sf/: mod.rs  service.rs
crates/chukei-core/tests/: proxy_e2e.rs  reproduce_bug1_tls_provider.rs
demo/: README.md  query-history.csv
deploy/: docker-compose.yaml  k8s.yaml
deploy/docker-data/: .keep
docs/: chukei_prd.md  cost_innovations.md  deployment.md  live_pilot.md
scripts/: integration-fakesnow.sh  live-pilot.sh  live_matrix.py  soak-report.sh  soak.sh  soak_traffic.py
scripts/release/: build-demo-assets.sh
seo-research/: README.md
seo-research/discovery/: competitor_content_audit.md  databricks_feasibility.md  databricks_market.md  llm_visibility_audit.md  market_landscape.md  positioning_competitors.md  public_launch_geo_readme_docs_2026-06-15.md
seo-research/output/: ai_citability_check.md  content_map.md  docs_content_plan.md  editorial_calendar.md  keyword_masterlist.csv  llms_txt_template.md  positioning.md  reddit_distribution_plan.md
seo-research/scripts/: score_keywords.py
seo-research/semrush-data/: broad_snowflake_caching.csv  broad_snowflake_cost_optimization.csv  broad_snowflake_credits.csv  broad_snowflake_pricing.csv  broad_snowflake_warehouse.csv  competitor_espresso_ai.csv  competitor_keebo_ai.csv  competitor_select_dev.csv  positioning_terms.csv  public_launch_seed_overview_2026-06-15.csv  questions_database_proxy_2026-06-18.csv  questions_dbt.csv  questions_snowflake_architecture_2026-06-18.csv  questions_snowflake_best_practices_2026-06-18.csv  questions_snowflake_caching.csv  questions_snowflake_cost.csv  questions_snowflake_cost_optimization.csv  questions_snowflake_credits.csv  questions_snowflake_performance_tuning_2026-06-18.csv  questions_snowflake_pricing.csv  questions_snowflake_warehouse.csv  refresh_primaries_2026-06-18.csv  (+10 more)
(+18 files in other folders)
