[package]
name = "chukei-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
axum-server.workspace = true
rustls.workspace = true
hyper.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlparser.workspace = true
blake3.workspace = true
flate2.workspace = true
prometheus-client.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
csv.workspace = true
chrono.workspace = true
uuid.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
rcgen.workspace = true
